Agregando estilos CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="todo">
     <section class="menu">
         <header class="menu__header">
-            <img src="assets\vector.png">
+            <img class="vector" src="assets\vector.png">
             <h3 class="menu__title">José Ángel Ipiña Jiménez</h3>
         </header>
         <nav class="links">
@@ -37,8 +37,8 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Fulana de Tal y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formada en .... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Ángel Ipiña y construyo paginas web</h2>
+                <h3 class="title__subsection">Soy estudiante de Ingeniería en Tecnologías Computacionales (ITC) en Universidad CNCI y actualmente estoy participando en el proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
